--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1> Welcome Bolod! </h1>
     <h3> Poribes ta shundor na? </h3>
     <h4> Kono hoichoi ache? </h4>
+    <p> Ektu cha khai? </p>
+    <p> Apnara khaben? </p>
+    <p> Dhele dei? </p>
 </body>
 </html>
